@@ -141,8 +141,6 @@ final public class BitSet extends Program                                       
   Bool    getBitNC (Int Index)             {return memoryRef.getBool(Index);}                                           // Get bit value at an index without checking that the index is valid
   boolean getBitNC (int Index)             {return memoryRef.getBool(Index);}                                           // Get bit value at an index without checking that the index is valid
 
-  void      setBit (Int Index, Bool Value) {memoryRef.putBool(Index, Value);}                                           // Set bit value.
-  void    setBitNC (Int Index, Bool Value) {memoryRef.putBool(Index, Value);}                                           // Set bit value without checking index
   void    setBitNC (Int Index)             {setBitNC(Index, true);}                                                     // Set bit value without checking index
   void  clearBitNC (Int Index)             {setBitNC(Index, false);}                                                    // Clear a bit value without checking index
 
@@ -1928,5 +1926,90 @@ cd verilog/deleteRandom32/; rm -f deleteRandom32; iverilog -g2012 -o deleteRando
            0  Branch.compactLeft
            0  Branch.compactRight
            0  Slots.build()
+
+           Run java -XX:+UseZGC -cp Classes com/AppaApps/Silicon/Tree 9
+ 1     0.02 test_deleteRandom32
+ 2     9.75 test_deleteRandom32
+            Code size:    1,233,696
+Instruction reduction:           99, percent: 99.9920
+cd verilog/deleteRandom32/; rm -f deleteRandom32; iverilog -g2012 -o deleteRandom32 deleteRandom32.v &&  vvp -M../../vpi -mwall_time deleteRandom32 running remotely
+     639,283  Bitset.setZeroPath
+     599,886  Bitset.nextOne
+     466,303  Tree.Print
+     424,754  Bitset.clearOnePath
+     348,448  Bitset.lowOne
+     277,472  Bitset.setBitNC_IB
+     242,890  Bitset.clearZeroPath
+     232,994  Bitset.nextZero
+     232,547  Bitset.setOnePath
+     183,703  Bitset.highOne
+     165,980  Bitset.setTrue
+     158,688  Slots
+     116,076  Bitset.lowZero
+     113,860  Bitset.firstOne
+      82,848  Tree.mergeUp
+      75,586  Bitset.firstZero
+      64,562  Tree.Path
+      52,152  Tree.mergeLeftIntoRightSibling
+      52,123  Tree.insert
+      47,429  Bitset.prevZero
+      40,313  Tree.findLeaf
+      37,962  Slots.delSlotToKeys
+      37,159  Tree.insertFullLeaf
+      37,071  Bitset.limitUpperOne
+      35,342  Tree.mergeLeftLeafIntoRightSibling
+      30,694  Tree.delete
+      30,586  Slots.redistribute
+      27,913  Program.UnitMemory.copy
+      25,759  Bitset.highZero
+      22,230  Slots.putSlotToKeys
+      21,879  Bitset.heightOne
+      19,908  Slots.moveSlot(BBb
+      19,680  Slots.locateNearestFreeSlotToKey
+      19,266  Program.UnitMemory.clearUnit(I)
+      17,858  Slots.compactSlotsLeft
+      15,661  Program.UnitMemory.clear(I)
+      15,552  Bitset.limitUpperZero
+      15,407  Tree.splitDown
+      15,380  Bitset.lastOne
+      13,399  Program.UnitMemory.clear(II)
+      13,254  Bitset.lastZero
+      10,610  Tree.mergeLeftBranchIntoRightSibling
+      10,580  Slots.compactKeysRight
+      10,342  Slots.compactKeysLeft
+       7,779  Tree.splitRootBranch
+       6,260  Bitset.canGoRight
+       6,234  Bitset.canGoLeft
+       6,060  Slots.moveKey
+       6,051  Tree.splitPoint
+       5,870  Slots.splitLeftEven
+       5,805  Bitset.limitLowerOne
+       5,643  Bitset.heightZero
+       4,851  mergeLeftLeft
+       4,194  Slots.delKey
+       4,065  Slots.putKey
+       3,954  Slots.moveSlot(II)
+       3,593  Slots.compactSlotsRight
+       2,587  Tree.mergeLeft
+       2,378  Slots.mergeFromLeftEven
+       2,019  Slots.shiftDownOne
+       1,515  Tree.mergeRightRight
+       1,501  Branch.mergeLeft
+       1,403  Slots.shiftUpOne
+       1,017  Bitset.pos_zero
+         981  Slots.splitLeftOdd
+         641  Branch.splitRight
+         638  Slots.splitRightEven
+         597  Slots.mergeFromLeftOdd
+         576  Slots.splitRightOdd
+         264  Branch.copyMergeData
+         129  Branch.mergeRight
+         116  Branch.insertEmpty
+          35  Tree.print
+           0  Branch.compactLeft
+           0  Branch.compactRight
+           0  Slots.build()
+5,208,145  Total
+
 
 */
